--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="carousel">
       <section class="carousel__coverImg">
         <img
-          src="https://s3-alpha-sig.figma.com/img/c798/5078/88c5cfef895a049cdda551ff834c257c?Expires=1722816000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=R8da9GeZUBdmFo5HvjLtZIqdpZXjrv~T-HAdMvJyXEea~vOjaodMS~qz4BZR2u7qPl~7v5NDs9xd6vQMyhN6rI2X1puiu6AfsW7OkHFVD8zYfY5~Qzx--Q2oLZHlMxDn~q~FrvuNILf2yMlokYovO6TMLaYGpy-eV8cdifnO3OQmhZZHSypBVoza1AiAeWaxyYQ9IPZa~PATnuSpSFpI3NvXC8cozrG5U0-ueADsX0AdxBoqA0usaPLs3mAvn8a0jHSuyVosPIbjF6m4CzDPYMKxmg6iAhFy8Uge50lhVvkPcp23QBQAoXJudkgNUq8cbYVv-tuurvmuPXAog8LXJA__"
+          src="images/cycling.png"
           alt=""
         >
       </section>
@@ -47,7 +47,7 @@
         <section
           class="carousel__card active"
           style="
-            background-image: url(https://s3-alpha-sig.figma.com/img/c798/5078/88c5cfef895a049cdda551ff834c257c?Expires=1722816000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=R8da9GeZUBdmFo5HvjLtZIqdpZXjrv~T-HAdMvJyXEea~vOjaodMS~qz4BZR2u7qPl~7v5NDs9xd6vQMyhN6rI2X1puiu6AfsW7OkHFVD8zYfY5~Qzx--Q2oLZHlMxDn~q~FrvuNILf2yMlokYovO6TMLaYGpy-eV8cdifnO3OQmhZZHSypBVoza1AiAeWaxyYQ9IPZa~PATnuSpSFpI3NvXC8cozrG5U0-ueADsX0AdxBoqA0usaPLs3mAvn8a0jHSuyVosPIbjF6m4CzDPYMKxmg6iAhFy8Uge50lhVvkPcp23QBQAoXJudkgNUq8cbYVv-tuurvmuPXAog8LXJA__);
+            background-image: url(images/cycling.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
@@ -55,7 +55,7 @@
         <section
           class="carousel__card"
           style="
-            background-image: url(https://s3-alpha-sig.figma.com/img/94be/e420/573d411c71c0379b348dea1962594755?Expires=1722816000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=BpjpKCXSuZLazvfZNrvGYhdM9kA7mW1O08OqcaaaqZamcbptnB0TACz1j5EvfoBztYAolF7Bg~DddWJ3WWOTN1jgq7u7WF-6hTE9tvoOt4m8Fhd~rPMg8Ml7CEoSlmUQmWgOB1~YZyVPDbr0~JsAYGLL7NmOnD47QXeD4fDvGxjSN-cAUFTbee2J0gmMdzuR1zV8xDa1qoUwD2zpabCtA2vFmZ-ICv23WEMVT8hnZRkDzjSW-BJqlOOSIJmcWd-4tK10n71gWmvh5SAU27JqFm0VAFe7YiktiJUwh5rqJjzab34nPNrTWJCHJXcpZ56elp7HAdtAyhmu4v0S5E7-3Q__);
+            background-image: url(images/canon.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
@@ -63,7 +63,7 @@
         <section
           class="carousel__card"
           style="
-            background-image: url(https://s3-alpha-sig.figma.com/img/325e/9f5e/055006417e1f028ec69bdfc505f8fc3f?Expires=1722816000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=QttXEFL0LcvDrzLpiM2-vtRd5P67yy8uI-LmSoOXCeqACuWcssQxDpk3c0423mbR-CIXdlNA24LPN8dH8q8BmrulI~7-iTKWhTPVspMOGMwzVzDRrNzr5MINmgeq~Ui~5IV5~6T3L7iB8c99sej3WFEqgzIeaed2jMO0Mxt8JM0lI116LEfQaAEV~8~EFQWDjET7z47IYiGvbYCgMwHYXNhIGI2vmayjR1qYcrQnFD9vwaGvfSqrtCJTNnpn2WnmoI4yj2skh-Izuri2qtnHc-CkofX9~VdbYH98oThxdmnI5Loy2WuaKkhtMub9Ed2ltZeQe2r-M4P9S8apmpP9ng__);
+            background-image: url(images/kids.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
@@ -71,7 +71,7 @@
         <section
           class="carousel__card"
           style="
-            background-image: url(https://s3-alpha-sig.figma.com/img/6c2b/1fe7/589ec25036f475ffec06a96e800e5884?Expires=1722816000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=cbPywznUjz-4anQbr0S1uLbRNDxlxTssEVyF0gglbcjygT5lA~B9Qgu9T4T8NanL1sdpgiAnvGh6al~85El8cOc2ewIg8m2CUMcl9pdNtMfo2XRM8gxe2WVJMw35nQlC~Hs2zJwCNp0eDt9nZVHbBJzjZyllmwDWS4KrD1GTtD0a7HpSM3kUx1o8btJ2mnlTY8D33KKmwyb4P3gW4TnMOfDvoNAvPv2vITAa9SiI~t1HldiEhWJwbPo1kCnsAXs8A4DxlpbXuAZs9gaqgqMuV7-fXZLxVfhvYGQKLnpGqLI4l6s~UE1bU32W-DOdEG7r9PnpoJdIyN8hYUEqnTCJAA__);
+            background-image: url(images/playground.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
@@ -79,7 +79,7 @@
         <section
           class="carousel__card"
           style="
-            background-image: url(https://s3-alpha-sig.figma.com/img/94be/e420/573d411c71c0379b348dea1962594755?Expires=1722816000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=BpjpKCXSuZLazvfZNrvGYhdM9kA7mW1O08OqcaaaqZamcbptnB0TACz1j5EvfoBztYAolF7Bg~DddWJ3WWOTN1jgq7u7WF-6hTE9tvoOt4m8Fhd~rPMg8Ml7CEoSlmUQmWgOB1~YZyVPDbr0~JsAYGLL7NmOnD47QXeD4fDvGxjSN-cAUFTbee2J0gmMdzuR1zV8xDa1qoUwD2zpabCtA2vFmZ-ICv23WEMVT8hnZRkDzjSW-BJqlOOSIJmcWd-4tK10n71gWmvh5SAU27JqFm0VAFe7YiktiJUwh5rqJjzab34nPNrTWJCHJXcpZ56elp7HAdtAyhmu4v0S5E7-3Q__);
+            background-image: url(images/canon.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
@@ -575,7 +575,7 @@
           document.getElementById("weather_icon").src =
             "http://" + result.current.condition.icon;
         });
-        
+
       if (window.innerWidth > 480) {
         const events = document.querySelectorAll(".events__eventWrapper");
         events.forEach((event) => {
