--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <i class="fa fa-bars"></i>
             </a>
           </li>
-          <li><a href="#" class="nav__link">Aktiv sammen</a></li>
+          <li><a href="activities.html" class="nav__link">Aktiv sammen</a></li>
           <li><a href="#" class="nav__link">Natur</a></li>
           <li><a href="#" class="nav__link">Kultur</a></li>
           <li><a href="#" class="nav__link">Contact</a></li>
@@ -102,26 +102,26 @@
           til oplever de bedste ferie med din familie. vi vil inspirere dig til
           at se den abslolut besdste ferie med din familie
         </p>
-        <section class="primaryBtn">
+        <section class="primaryBtn" onclick="location.replace('activities.html')">
           <span>udforske nu</span>
           <img class="arrow" src="images/oui_arrow-up.svg" alt="">
         </section>
       </section>
       <section class="hero__image">
         <img
-          src="https://s3-alpha-sig.figma.com/img/d47e/6654/b62a70566df22be999a1ec120b7a76c3?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=dnE1682ha-JhqU6tZTb98b42b7kCQBPEia80Y8YRX7cVB8DA8mVo10Gv3K2JL00rkhNnwUyEdQPFaqVp9UsR3PygNpomyR1KG0u4fvT4Pni1U~vKFRrmaM7bRbSmP0cb9KKXPyOCqbbWGLfXOGmpMABnuiLbRx8CqBU4gxppByEHgXmYW8GurGSJouee9vEG6LbpEHxffsw6JP5840zi~QrSrfss5lBI98lUqgzR7PhqomCzcnhbI7MOd8H-fry7dCO8CCS5RL-rWBt7m-10lV~z3c2aKThr9PvuQDT4TLl58xejYj9DjIthZGgrTXuno8t5IZp0BpW2iVWdIft-eQ__"
+          src="images/cycling.png"
           alt=""
         >
       </section>
       <section class="hero__image">
         <img
-          src="https://s3-alpha-sig.figma.com/img/91ca/1ce4/32b2a5e1f94f3de2188bd3d62c6b645f?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=k4Moa-lh5XOS4rpwmSRpndDnyE9XQgUQim3MJLk86so-kBZ8QVyO-hYQRJ9xQGsLjMBaP~Zkib2xUqPyvPlOO6PG5BtAlxdRkf86eB6b3wFcuRI9QHnvndiJQcmGqs0H19qJcn0xt9E9oWhpLKaoLhGw~iM7fzPLajhBG-ZVToOaRUOSouTFotOeHyVDxwjWtAsiOLF133Yf3TmYISsMX~tTWBHAbbzjSUzWqNZ1RrK5Ypl9MNy5x1Wd06R1hCd~qEtsBjkU5M82p26TL8zseG1pORkUzabVILOudMwORzN3Vq51oNstDGjl9lHOWZWipVxNDLborE9tMjEFzAeXKQ__"
+          src="images/cycling1.png"
           alt=""
         >
       </section>
       <section class="hero__image">
         <img
-          src="https://s3-alpha-sig.figma.com/img/9546/c8e6/9a23a3544f53af4d9ee15c5d9254e872?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=oqfT86U8gPhatOXVA92W756QYHM9MJQBTWQPh8WRnb8mUT9ZIDdjQ7a68krNJbq5E-59AEqUN~sjTr1HTQaZtZyulH-G~X6di6HH2VVngmExWAZhSWpyyp2F6kJr1nJbCPzyZi-SlheC~2O9uNBdNKZYxYKNhrTJT~XMFVD54mt8~b2Qx2DTgW7wWvLi36~KJSPjmOYzhM2QHqCBjHaCaC8XL3HhIW0OvfU9OYEsx4XLpJsCVURFhIJf87RoR0n-8lLDCO69mKdxY5~ZCJJUPBxdSXzOVC20pFl~jjCyWpqa-uyBc1jqMuc17egwQClLOYh9oR3-xEfekBCZcxbdOA__"
+          src="images/roses.png"
           alt=""
         >
       </section>
@@ -368,19 +368,19 @@
       </section>
       <section class="playground__pics">
         <img
-          src="https://s3-alpha-sig.figma.com/img/6c2b/1fe7/589ec25036f475ffec06a96e800e5884?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=l9pFZE~AwB4bYv~3vkEqgr~uJ2ZTayd3MluC8lzeESotEyl5NSFUEfmKEJXGx0UQqhK7Os7DfhT6avPbBjipqPQJVXk6AEGm3Sdv32U0u18HGzYpzOkZ6KLPvzxlEmy0k5l5LgRW-j5lqoi1YCVqAb~wyAOV1r6-fUT2g-NtP6teybx7tgg-2jJLk8o42fYU~1we4E3u14yyvPTAE4P4PhMJRmDYHwULK2TmtuYQX8khW-D5yb8UJcbmzDOG1J0ArHa0pcxMWpKJsVscIQk~W50OU3bkQSQIgETEphBpNq3rKfL7R2COcTNE7EeI7wYf5KskTrgEHeC2J7wKP0wV7Q__"
+          src="images/playground.png"
           alt=""
         >
         <img
-          src="https://s3-alpha-sig.figma.com/img/c5d5/20f1/5babc1372fa806853b5a9a74069e0b0f?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=VC~8ZqbAiXkIVby6DJqXcxg1Y191JU3qyZparZEJt1aH87qcRTqYApGq~vBnfny6DKUAYcO073BZud8vvKqntu~ASMJe1rgtMAlAfqBjTJV0YCKORZgLcP1-L-j3CiS1jduZE~c5ZsRoDPOQbrXC2CP6BahTxfwuacy0cFLMnzskQEBzmbGyGmdlfUE6zdSFsQxKQAlDoHBEY~NMKueQxXbVRTjOKt-vQvSPzHjZctUoMeyvGQhfCLSvAhSovfPHtI5dpavnBGm7BYjiFF09bvX1xqsMM3rGgII37y9baLNOQjcqKYmz-Md1RLTJ0~SSzGxQBc7o6PhzFcML75Lldg__"
+          src="images/playground1.png"
           alt=""
         >
         <img
-          src="https://s3-alpha-sig.figma.com/img/325e/9f5e/055006417e1f028ec69bdfc505f8fc3f?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=jdXxu9q6TMejo5FneriMq9ZJIq5j8rXIlzVNBSE3hijGVd07I-vUWhebyDrzuZ0rTWgcEXAJiP6xkHxnUBgfnFUNtnbK0YsXnnqO2gLYnpiyDvQv2-H0y9Qf1RJ4fxJZm6~6XghZTwy25EWnxCmrLQimkFCYH9f7Gir8smirb0hJKkuVOTC4qVi1n~-TgSzFsF848FbpC11~2C8yC6IG1QcRO6KXQHI45gOLsUbuBpnMw4K~E5IpuHsRiW~mEiFnIa-V3WJVJCwrotuUJ6yXHx5J6~VHj0wBwjEguboDOjC5-BfVhNoxbegz-hz0yJDf3WPE7~8Qte9gZVHoz5JKtQ__"
+          src="images/kids.png"
           alt=""
         >
         <img
-          src="https://s3-alpha-sig.figma.com/img/1539/3cbc/f60fdf99d6cef24098cfacc2fd324c2a?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PrVb-HsxhHV3118pBvO21jUOzMOY-cMhRxXAgJ3s65g~CAxsinXrawa4Kt2gZzBysp0hRX7vqQU0Fz9~eeoqyMcEvhJ2-~FFhgFb-LRLVi6Of9cj4-s~BCCbZPBA~fShS0vhywjuYftFUJ8wBpaQEcdkNVuXkp-mLTcAzEWUwxCSlE9xdS8XoEYjc--UHGor42eCo58UaVE8vrhOmEXcUei88xhPNRP65neJKBenXHADQrZmAxVrwDYfnUVTzh-3w-jyyewT3dFq2YYZCYfrXssA~Mb8s50oDlqx6PYe6beEOzI5LEX4e-99EOdMACo1WlljDAO-lytzbVhYego96A__"
+          src="images/playground_sand.png"
           alt=""
         >
       </section>
@@ -389,7 +389,7 @@
     <section class="attractions">
       <article class="attractions__product">
         <img
-          src="https://s3-alpha-sig.figma.com/img/6676/64da/22c3ea58ddf4b415065466e9bc6d70d5?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=G1350EX7AVtJVV3aUdw0ouh1WSlg4gFvG76lvHWZIKDBqtNK71ELvd3c5xpIncjcd0vRv8hNRAQxDMU7xSKP7c7lZK6MEgdAKkPhSiwOtAL2G2FJH03j5Ny7REDfLbnB1-D83L1aVYzu~LgCsqStDb7z0Tn8M1cVMipphC-rxQciUSW~wf4bJhOdOGfgzcRKfhN6W20GpEkpHJrC~LcVWwk0CrLLTQuLAXakD1PEbcySnC0GRSVGn~EGoF~oNleMMYLGej93QCLq7vWVOrrIB1w2zhv0BIPpyj5gMjOArwUjvrjAJVEhvS2pZkBboz2mVVtb2gabt7ZdrCJ68ppNNQ__"
+          src="images/sceince_park.png"
           alt=""
         >
         <span class="attraction__name">Børn Universe Science Park</span>
@@ -418,7 +418,7 @@
       </article>
       <article class="attractions__product">
         <img
-          src="https://s3-alpha-sig.figma.com/img/94be/e420/573d411c71c0379b348dea1962594755?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=PEghmeQHbw-eCdoYWCkaeUv3e0uUpX9HcqFANq2x6wf3OU8b-uVh4b0IcKf74wg7Ee5bOoJXLHvy36C5Nk0roy0v-rbfOj7Lo9gJcy-KNb3ITtMNGuLpg6sbhg~SA40mIqOYGyRzWw3YSYVuyCQIzmikzim2TxxXP7~e2S1Raco2tP2~-0sI8o-9tsTdCrJSDiFCM3woj730b4C7SD4PoeIZgQn-8gGLNjaH4aFA6DkPWPyuAFKaA2NtEPc4kvgd1N-TP6qIIHQZpnT0WlLIaG3UOF~DtMBeTQAGODZJ45c1eJaBTYOs6OcZY0chXwxy2DRMQAI0DVIAon4M5bMGDQ__"
+          src="images/canon.png"
           alt=""
         >
         <span class="attraction__name">Børn Universe Science Park</span>
@@ -447,7 +447,7 @@
       </article>
       <article class="attractions__product">
         <img
-          src="https://s3-alpha-sig.figma.com/img/4fe6/b3bf/c688323e53e98dca0b9b58d81c38c4b1?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=dioiQfofqH9LDhNvWjTVWxI6ze~ASC3UBuOjZr9EeDkYrGM9RqMnhSQKNRyYCb75GLFgCEYQDWm12VEjuUD0YgcSH-pyIMhyIflYHAILufXnkZm4Rv~jewuaDLuE33OZb0aLpTmLcVo2u8rXVUX28XSKp-tAmSrgRwZrifTVKFCAvYIrJXJvQMd~TZ2eEj46H18b1x4HlHXtQZiB124E5uC-IxJQwWHgin2hz~x63Lv9DcCpA49WgboDTJzBSAxtLU9ECOWLo3O619wlHxE4sFFxytiPia6t37vzn3MXaWANzS~23dx0epXUCytyt8THHTz4b-s0~MUvjCDshIl4LQ__"
+          src="images/catherin.png"
           alt=""
         >
         <span class="attraction__name">Børn Universe Science Park</span>
@@ -476,7 +476,7 @@
       </article>
       <article class="attractions__product">
         <img
-          src="https://s3-alpha-sig.figma.com/img/d6bc/912f/195c707af3edfcbbe6ec41c7bcd95d27?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=kN5qNhL6DiuxAQmt6w~ITJscvPvuJ8hTNlMWXJE8nUqcBZwoWdDijY9QVrrB1uG901VGtQZntLtHn2AcQo53SbndMBEFBvM0TE5cF4ii453bu7KOgPuRf2Kn10JMkYTqf2KBs7Co~K7Cw2M5RToJMwSHdZ1xyIx1LL4olIltT5FgEICj-DSN7kvXvx36xrLKFs40OAP01VhKOSEfR00Em555klozzHnt~OVHm3noydtLBfUnhgfOwhuQ56514XImvXvLPUfF1~0duAeLwZRZaJ8WGGCKw4PKx~icrTp6GLq2qJr9IjC11o7IQcLwlkbH~Vt3jTU6ZPmtPYsxQkukRQ__"
+          src="images/dybbolbank.png"
           alt=""
         >
         <span class="attraction__name">Børn Universe Science Park</span>
@@ -505,7 +505,7 @@
       </article>
       <article class="attractions__product">
         <img
-          src="https://s3-alpha-sig.figma.com/img/5ff3/ee0f/598703640972def6141b5dff1a59f29a?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=EgOQ3QHF89x26XPoE0AxKKcD8nfNkw81PNFOE-NVrKy-54YpUdtoBEn-2140JHbMnzBdr1aghcYfVsGwMfPcUkQaf3lE1o~dH5vMRGcHfL6LX2VD5yQY8Gh9gipP4GPkh-Kck8JmXQhESsACEScEHC0hNF9iDDdURExARpTvCGTFZYwS4Jz~vOcekhWFpIOgKfbrSyXJ7~N9oAHjfFoTVWIXtFBjJiAXYxAC1Wv4-bP7kAzGx8MstaragRorjo~OUFakgqpJYa-6Sc0UNH8wIi6b9tacMJFFwBy7GauLa-ZGUprFbJ96yBxBw2jJG3oSo2xIRdFVDGl9VtpLUidZZA__"
+          src="images/castle.png"
           alt=""
         >
         <span class="attraction__name">Børn Universe Science Park</span>
