--- a/activities.html
+++ b/activities.html
@@ -34,8 +34,7 @@
       </section>
     </header>
     <section class="planning">
-      <img
-        src="https://s3-alpha-sig.figma.com/img/d47e/6654/b62a70566df22be999a1ec120b7a76c3?Expires=1723420800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=dnE1682ha-JhqU6tZTb98b42b7kCQBPEia80Y8YRX7cVB8DA8mVo10Gv3K2JL00rkhNnwUyEdQPFaqVp9UsR3PygNpomyR1KG0u4fvT4Pni1U~vKFRrmaM7bRbSmP0cb9KKXPyOCqbbWGLfXOGmpMABnuiLbRx8CqBU4gxppByEHgXmYW8GurGSJouee9vEG6LbpEHxffsw6JP5840zi~QrSrfss5lBI98lUqgzR7PhqomCzcnhbI7MOd8H-fry7dCO8CCS5RL-rWBt7m-10lV~z3c2aKThr9PvuQDT4TLl58xejYj9DjIthZGgrTXuno8t5IZp0BpW2iVWdIft-eQ__"
+      <img src="images/cycling.png"
         alt=""
       >
     </section>
