--- a/activities.html
+++ b/activities.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <section class="header__logo">
-        <img src="images/logo.png" alt="Logo" >
+        <a href="index.html">
+          <img src="images/logo.png" alt="Logo" >
+        </a>
       </section>
       <nav>
         <ul>
@@ -251,7 +253,7 @@
     <script>
       applyActivityData();
 
-      const weatherEndpoint = "http://api.weatherapi.com/v1/current.json?key=287c8ea7caa041afa27193527241407&q=sonderborg&aqi=no";
+      const weatherEndpoint = "https://api.weatherapi.com/v1/current.json?key=287c8ea7caa041afa27193527241407&q=sonderborg&aqi=no";
         fetchData(weatherEndpoint).then((result) => {
           document.querySelector(".header__weatherDegree").innerText =
             Math.round(result.current.temp_c) + "°";
