--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <section class="header__logo">
-        <img src="images/logo.png" alt="Logo" >
+        <img src="images/logo.png" alt="logo" >
       </section>
       <nav>
         <ul>
@@ -32,7 +32,7 @@
         </ul>
       </nav>
       <section class="header__weather">
-        <img class="header__weatherIcon" id="weather_icon" src="icon" alt="" >
+        <img class="header__weatherIcon" id="weather_icon" src="icon" alt="wheater status" >
         <section class="header__weatherDegree">15</section>
       </section>
     </header>
@@ -40,7 +40,7 @@
       <section class="carousel__coverImg">
         <img
           src="images/cycling.png"
-          alt=""
+          alt="family ridning becycle"
         >
       </section>
       <section class="carousel__container">
@@ -104,25 +104,25 @@
         </p>
         <section class="primaryBtn" onclick="location.replace('activities.html')">
           <span>udforske nu</span>
-          <img class="arrow" src="images/oui_arrow-up.svg" alt="">
+          <img class="arrow" src="images/oui_arrow-up.svg" alt="Arrow up">
         </section>
       </section>
       <section class="hero__image">
         <img
           src="images/cycling.png"
-          alt=""
+          alt="Family riding becycles"
         >
       </section>
       <section class="hero__image">
         <img
           src="images/cycling1.png"
-          alt=""
+          alt="Family with becycles"
         >
       </section>
       <section class="hero__image">
         <img
           src="images/roses.png"
-          alt=""
+          alt="Field of roses"
         >
       </section>
     </section>
@@ -369,19 +369,19 @@
       <section class="playground__pics">
         <img
           src="images/playground.png"
-          alt=""
+          alt="Playground"
         >
         <img
           src="images/playground1.png"
-          alt=""
+          alt="Playground"
         >
         <img
           src="images/kids.png"
-          alt=""
+          alt="Playground"
         >
         <img
           src="images/playground_sand.png"
-          alt=""
+          alt="Playground"
         >
       </section>
     </section>
@@ -389,8 +389,8 @@
     <section class="attractions">
       <article class="attractions__product">
         <img
-          src="images/sceince_park.png"
-          alt=""
+          src="images/science_park.png"
+          alt="Univers science park"
         >
         <span class="attraction__name">Børn Universe Science Park</span>
         <span class="attraction__details"
@@ -418,8 +418,8 @@
       </article>
       <article class="attractions__product">
         <img
-          src="images/canon.png"
-          alt=""
+          src="images/cannon.png"
+          alt="Cannon"
         >
         <span class="attraction__name">Børn Universe Science Park</span>
         <span class="attraction__details"
@@ -448,7 +448,7 @@
       <article class="attractions__product">
         <img
           src="images/catherin.png"
-          alt=""
+          alt=" Cathrien castle"
         >
         <span class="attraction__name">Børn Universe Science Park</span>
         <span class="attraction__details"
@@ -477,7 +477,7 @@
       <article class="attractions__product">
         <img
           src="images/dybbolbank.png"
-          alt=""
+          alt="Dybbel Bank"
         >
         <span class="attraction__name">Børn Universe Science Park</span>
         <span class="attraction__details"
@@ -506,7 +506,7 @@
       <article class="attractions__product">
         <img
           src="images/castle.png"
-          alt=""
+          alt="soenderborg castle"
         >
         <span class="attraction__name">Børn Universe Science Park</span>
         <span class="attraction__details"
