--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section
           class="carousel__card"
           style="
-            background-image: url(images/canon.png);
+            background-image: url(images/cannon.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
