--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <img
           src="images/cycling.png"
           alt="family ridning becycle"
+          
         >
       </section>
       <section class="carousel__container">
@@ -55,7 +56,7 @@
         <section
           class="carousel__card"
           style="
-            background-image: url(images/canon.png);
+            background-image: url(images/cannon.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
