--- a/index.html
+++ b/index.html
@@ -422,10 +422,9 @@
           src="images/cannon.png"
           alt="Cannon"
         >
-        <span class="attraction__name">Børn Universe Science Park</span>
+        <span class="attraction__name">Sønderborg slot</span>
         <span class="attraction__details"
-          >Oplev spænding og sjove med hele familien i sønderjyllands største
-          oplevelsespark</span
+          >Slotttet blev grundlagt helt tilbage i 1200-tallet og har en lang og dramatisk historie</span
         >
         <section class="attraction__links">
           <a href="#" class="primaryLink">Læse mere</a>
@@ -451,10 +450,9 @@
           src="images/catherin.png"
           alt=" Cathrien castle"
         >
-        <span class="attraction__name">Børn Universe Science Park</span>
+        <span class="attraction__name">Cathrinesminde teglværk</span>
         <span class="attraction__details"
-          >Oplev spænding og sjove med hele familien i sønderjyllands største
-          oplevelsespark</span
+          >Et velbevaret kulturmiljø og museum, der er udpeget af  kulturarvstyrelsen som et af de vigtigste industriminder i Danmark </span
         >
         <section class="attraction__links">
           <a href="#" class="primaryLink">Læse mere</a>
@@ -480,10 +478,9 @@
           src="images/dybbolbank.png"
           alt="Dybbel Bank"
         >
-        <span class="attraction__name">Børn Universe Science Park</span>
+        <span class="attraction__name">Historiecenter Dybbøl Banke </span>
         <span class="attraction__details"
-          >Oplev spænding og sjove med hele familien i sønderjyllands største
-          oplevelsespark</span
+          >Dybbøl Banke blive du hvirvlet ind i et af de mest spændende kapitler i Danmarkhistoren lige der, hvor det slete </span
         >
         <section class="attraction__links">
           <a href="#" class="primaryLink">Læse mere</a>
@@ -509,10 +506,9 @@
           src="images/castle.png"
           alt="soenderborg castle"
         >
-        <span class="attraction__name">Børn Universe Science Park</span>
+        <span class="attraction__name">Sønderborg slot</span>
         <span class="attraction__details"
-          >Oplev spænding og sjove med hele familien i sønderjyllands største
-          oplevelsespark</span
+          >Slotttet blev grundlagt helt tilbage i 1200-tallet og har en lang og dramatisk historie.</span
         >
         <section class="attraction__links">
           <a href="#" class="primaryLink">Læse mere</a>
