--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
           src="images/cannon.png"
           alt="Cannon"
         >
-        <span class="attraction__name">Sønderborg slot</span>
+        <span class="attraction__name">Historiecenter Dybbøl Banke</span>
         <span class="attraction__details"
-          >Slotttet blev grundlagt helt tilbage i 1200-tallet og har en lang og dramatisk historie</span
+          >Dybbøl Banke blive du hvirvlet ind i et af de mest spændende kapitler i Danmarkhistoren lige der, hvor det slete </span
         >
         <section class="attraction__links">
           <a href="#" class="primaryLink">Læse mere</a>
@@ -478,9 +478,9 @@
           src="images/dybbolbank.png"
           alt="Dybbel Bank"
         >
-        <span class="attraction__name">Historiecenter Dybbøl Banke </span>
+        <span class="attraction__name">Dybbøl Møller </span>
         <span class="attraction__details"
-          >Dybbøl Banke blive du hvirvlet ind i et af de mest spændende kapitler i Danmarkhistoren lige der, hvor det slete </span
+          >En galleri-hollønder mølle, der er kendt som nationalsymbolet for dansk tapperhed  </span
         >
         <section class="attraction__links">
           <a href="#" class="primaryLink">Læse mere</a>
