--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section
           class="carousel__card"
           style="
-            background-image: url(images/cannon.png);
+            background-image: url(images/dybbolbank.png);
           "
         >
           <h2>Velkommen til Sønderborg</h2>
